<resources>
    <string name="app_name">PIEAS Student Directory</string>
    <string name="empty">Enter</string>
    <string name="student_list">Student List (%d:%d)</string>
    <string name="registration_form">Registration Form</string>
    <string name="search_student">Search Student</string>
    <string name="student_image">Student Image</string>
    <string name="student_name">Student Name:</string>
    <string name="father_name">Father Name:</string>
    <string name="room">Room#:</string>
    <string name="hostel">Hostel:</string>
    <string name="address">Address:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="semester">Semester:</string>
    <string name="_1_8">1 – 8</string>
    <string name="batch">Batch:</string>
    <string name="email">Email:</string>
    <string name="username_domain_com">userName@domain.com</string>
    <string name="department">Department:</string>
    <string name="dee_dme_dcis">DEE, DME, DCIS</string>
    <string name="registration">Registration#:</string>
    <string name="reg_no">###########</string>
    <string name="phone">Phone#:</string>
    <string name="phone_no">###########</string>
    <string name="gender">Gender:</string>
    <string name="male_female">M, F</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="remove">Remove</string>
    <string name="show_all">Show All</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="hostels">A, B, E, C, G, H, J</string>
    <string name="batchNo">##-##</string>
    <string name="cgpa">CGPA</string>
    <string name="cgpa_pattern">##.##</string>
    <string name="age">Age</string>
    <string name="edit">Edit</string>
</resources>
