<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/search_student"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView" />

    <TextView
        android:id="@+id/regNoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/registration"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/regNoEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/departmentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/department"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/departmentEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regNoTextView" />

    <TextView
        android:id="@+id/phoneNoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/phone"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/phoneNoEditView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departmentTextView" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/gender"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/genderEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNoTextView" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name2"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/regNoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/reg_no"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/regNoTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/departmentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/dee_dme_dcis"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/departmentTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/phoneNoEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneNoTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/genderEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/male_female"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/genderTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="actionPerformed"
            android:text="@string/search" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="actionPerformed"
            android:text="@string/cancel" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>